2001-05-31  Sven Wischnowsky  <wischnow@zsh.org>

	* 14602: Completion/Base/Utility/_values,
	Functions/Misc/nslookup: better prompt matching in nslookup;
	fix separator handling in _multi_parts

	* 14599: Completion/Base/Utility/_multi_parts: always use
	supplied matchers

2001-05-31  Bart Schaefer  <schaefer@zsh.org>

	* 14597: Doc/Zsh/builtins.yo: Back out 12724; instead, insert a
	space on a line between paragraphs to prevent yodl from treating
	it as paragraph break.  Still a hack, but a better hack.

2001-05-30  Peter Stephenson  <pws@csr.com>

	* 14573: INSTALL, README, Doc/Zsh/builtins.yo, Test/README,
	Util/helpfiles:  documentation changes for 4.0.1 for clarity,
	plus avoid buggy nroff wrap in read builtin.

2001-05-30  Bart Schaefer  <schaefer@zsh.org>

	* 14516: Use the same ncurses compilation test in gettermcap() as
	was already used in echotc().  This needs more work, hence the
	delay in getting it committed.

2001-05-30  Oliver Kiddle  <opk@zsh.org>

	* 14567: Completion/Unix/Command/_pine,
	Completion/Zsh/Command/.distfiles, Completion/Zsh/Command/_echotc,
	Completion/Zsh/Command/_echoti: new echoti completion, update
	echotc completion and update _pine to reflect pine 4.33

	* 14563: Etc/MACHINES: IRIX 5.3 fails & other updates

2001-05-30  Andrej Borsenkow  <bor@zsh.org>

	* 14566: Test/C02cond.ztst: more testing for unimplemented
	features.

	* 14557: INSTALL: remove 3.1 version number

2001-05-30  Sven Wischnowsky  <wischnow@zsh.org>

	* 14558: Completion/Base/Widget/_correct_word,
	Completion/Base/Widget/_expand_word: some cleanup

2001-05-30  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* unposted: Zsh/Doc/metafaq.yo: make line spacing consistent.

2001-05-29  Clint Adams  <clint@zsh.org>

	* 14553: Src/Zle/zle_hist.c: fix thinko

	* 14552: Src/Zle/zle_hist.c: repeat last vi history search
	if search string is empty.

2001-05-29  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/compdump, Completion/BSD/Command/_cvsup,